--- a/source/css/_posts.scss
+++ b/source/css/_posts.scss
@@ -5,7 +5,7 @@
 .post {
   @include col(3);
   color: $spot1;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   
   h4 {
     border-bottom: $spot1 2px solid;
